# musicBot

./: Dockerfile  README.md  requirements.txt
src/: config.py  main.py
src/ai/: client.py
src/database/: database.py  models.py
src/database/migrations/: script.py.mako
src/services/: redis_client.py
src/telegram/: keyboards.py
src/telegram/handlers/: __init__.py  admin.py  download.py  liked_songs.py  playlist.py  search.py
src/telegram/middlewares/: throttling.py
src/utils/: ffmpeg_converter.py
src/youtube/: client.py
telegram_music_bot/: Dockerfile  README.md  alembic.ini  pyproject.toml
telegram_music_bot/src/: main.py
telegram_music_bot/src/database/: database.py
telegram_music_bot/src/database/migrations/: env.py
telegram_music_bot/src/services/: playlist_service.py  redis_client.py  song_service.py  user_service.py
telegram_music_bot/src/telegram/: keyboards.py
telegram_music_bot/src/telegram/handlers/: ai_recommendation.py  search.py  start.py
telegram_music_bot/src/telegram/middlewares/: session_middleware.py
telegram_music_bot/src/utils/: ffmpeg_converter.py
telegram_music_bot/src/youtube/: client.py
